examples/addons_examples/fonts: added SourceSansPro.otf and SourceSansProLicense.txt (unused so far). addons/imguibindings: various changes to fix incorrect dimming when using CTRL+Tab or Modal Windows. addons/imguicodeeditor/imguicodeeditor.h/cpp: some minor fixes (focusing problems + some crashes + wrong newline tab autoinsertion after some multibytes/UTF8 chars).

--- a/examples/addons_examples/addons_examples_mingw.cbp
+++ b/examples/addons_examples/addons_examples_mingw.cbp
@@ -38,6 +38,7 @@
 		<Unit filename="../../imgui.cpp" />
 		<Unit filename="../../imgui_demo.cpp" />
 		<Unit filename="../../imgui_draw.cpp" />
+		<Unit filename="../../imgui_tables.cpp" />		
 		<Unit filename="main.cpp">
 			<Option compilerVar="CC" />
 		</Unit>
